[project]
name = "incidents_app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.1",
    "alembic-postgresql-enum>=1.8.0",
    "flask-openapi3[swagger]>=4.3.0",
    "psycopg2>=2.9.11",
    "sqlmodel>=0.0.27",
]
